src/test/run-pass/unique-autoderef-index.rs
fn main() {
    let i = ~[100];
    assert i[0] == 100;
}